# prompt_processing_rag_svc_template

./: .env.example  README.md  create_project_structure.py  notebook.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
app/agents/: __init__.py  react_agent.py
app/agents/tools/: calculator_tool.py  search_tool.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/controllers/: __init__.py  admin_controller.py  query_controller.py
app/api/v1/routes/: __init__.py  admin_routes.py  query_routes.py
app/api/v1/schemas/: __init__.py
app/api/v1/schemas/request/: __init__.py  query_request.py
app/api/v1/schemas/response/: __init__.py  admin_response.py  query_response.py
app/chains/: conversation_chain.py  rag_chain.py  summary_chain.py
app/core/: __init__.py  config.py  dependencies.py  exceptions.py
app/db/: __init__.py  mongodb.py  vector_store.py
app/models/: document.py  query.py  response.py
app/services/: __init__.py  data_sync_service.py  llm_service.py  memory_service.py  rag_service.py  retrieval_service.py  summary_service.py
app/utils/: prefiltering.py
cross_cutting/caching/: redis_cache.py
cross_cutting/compression/: __init__.py  llm_lingua.py
cross_cutting/observability/: logging.py  metrics.py  tracing.py
cross_cutting/resilience/: circuit_breaker.py  rate_limiter.py  resilience.py
cross_cutting/security/: authentication.py  authorization.py  security.py
deployment/: Dockerfile  docker-compose.yml
deployment/kubernetes/: deployment.yaml  service.yaml
docs/: api.md  cross_cutting_concerns.md  deployment.md  models.md  monitoring.md
libs/: pyvenv.cfg
libs/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
monitoring/grafana/dashboards/: rag_microservice_dashboard.json
monitoring/jaeger/: jaeger.yml
monitoring/prometheus/: prometheus.yml
